﻿v1.1.0 (2023.07.xx.)
- Számítógépre telepített nyomtatókat is lekéri a program.
- Internet sebességet is leméri a program (csak 64 bites Windows esetén).